# pro2cmake

./: README.md
q2c/: CMakeLists.txt  main.cpp  project.cpp  project.h  terminalparser.cpp  terminalparser.h
